--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!--    Section 2 of Home Page  -->
     
     <div class="heroImg">
-        <img src="images/Clare_Hero_Image.jpg" alt="Image of Clare And Towns">
+        <img src="images/Clare_Hero_Image.jpg" alt="Clare And Her Towns">
     </div>
         
     <!--    Section 3 of Home Page  -->
