--- a/contactUs.html
+++ b/contactUs.html
@@ -65,7 +65,7 @@
             
             <ul>
                 <li><label class="col1" for="first_name">First Name:* </label><input type="text" name="first_name" id="first_name"></li>
-                <li><label class="col2" for="last_name">Last Name:* </label><input type="text" name="last_name" id="address"></li>
+                <li><label class="col2" for="last_name">Last Name:* </label><input type="text" name="last_name" id="last_name"></li>
                 <li><label class="col3" for="email1">Email:* </label><input type="email" name="email1" id="email1"></li>
                 <li><label class="col4" for="email2">Retype your Email:* </label><input type="email" name="email2" id="email2"></li>
                 <li><label class="col5" for="phone"> Telephone:* </label><input type="text" name="phone" id="phone"></li>
